fix: scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,17 +36,17 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.custom-scrollbar {
-  &::-webkit-scrollbar-track {
-    width: 4px;
-    background-color: transparent;
-    border-radius: 0;
-    margin: 0px;
-  }
-  &::-webkit-scrollbar-thumb {
-    border-radius: none;
-    background-color: #e3b38f;
-  }
+.custom-scrollbar::-webkit-scrollbar {
+  width: 4px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #e3b38f;
+  border-radius: 0;
 }
 
 .menu-active {
